--- a/XF/SQLiteDataBase/SQLiteDataBase.iOS/SQLiteDataBase.iOS.csproj
+++ b/XF/SQLiteDataBase/SQLiteDataBase.iOS/SQLiteDataBase.iOS.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -122,22 +122,22 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="C1.iOS.Core">
-      <Version>4.8.20203.495</Version>
+      <Version>4.8.20211.499</Version>
     </PackageReference>
     <PackageReference Include="C1.iOS.Grid">
-      <Version>4.8.20203.495</Version>
+      <Version>4.8.20211.499</Version>
     </PackageReference>
     <PackageReference Include="C1.Xamarin.Forms.Core">
-      <Version>4.8.20203.495</Version>
+      <Version>4.8.20211.499</Version>
     </PackageReference>
     <PackageReference Include="C1.Xamarin.Forms.Core">
-      <Version>4.8.20203.495</Version>
+      <Version>4.8.20211.499</Version>
     </PackageReference>
     <PackageReference Include="C1.Xamarin.Forms.Grid">
-      <Version>4.8.20203.495</Version>
+      <Version>4.8.20211.499</Version>
     </PackageReference>
     <PackageReference Include="C1.Xamarin.Forms.Grid">
-      <Version>4.8.20203.495</Version>
+      <Version>4.8.20211.499</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore">
       <Version>2.2.2</Version>
